...
                android:layout_centerVertical="true"
                android:textColor="@color/red"
                android:text="M Fusion Sandyford"
                android:textSize="16sp" />

        <RelativeLayout
                android:id="@+id/relativeLayoutCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp">

            <ImageView
...
